Remove bundle inheritance

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -41,6 +41,18 @@ homepage:
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
 
+fos_user_security_login:
+    path: /login
+    defaults:
+        _controller: Wallabag\UserBundle\Controller\SecurityController::loginAction
+    methods: [GET, POST]
+
+fos_user_registration_register:
+    path: /register
+    defaults:
+        _controller: Wallabag\UserBundle\Controller\RegistrationController::registerAction
+    methods: [GET, POST]
+
 fos_oauth_server_token:
     resource: "@FOSOAuthServerBundle/Resources/config/routing/token.xml"
 
