Use FQCN as service name for UserRepository

--- a/app/config/services_test.yml
+++ b/app/config/services_test.yml
@@ -13,7 +13,7 @@ services:
         public: true
 
     wallabag_user.user_repository.test:
-        alias: wallabag_user.user_repository
+        alias: Wallabag\UserBundle\Repository\UserRepository
         public: true
 
     filesystem_cache:
