--- a/src/Wallabag/ImportBundle/Resources/config/redis.yml
+++ b/src/Wallabag/ImportBundle/Resources/config/redis.yml
@@ -16,7 +16,7 @@ services:
         class: Wallabag\ImportBundle\Consumer\RedisEntryConsumer
         arguments:
             - "@doctrine.orm.entity_manager"
-            - "@wallabag_user.user_repository"
+            - '@Wallabag\UserBundle\Repository\UserRepository'
             - "@wallabag_import.readability.import"
             - "@event_dispatcher"
             - "@logger"
@@ -37,7 +37,7 @@ services:
         class: Wallabag\ImportBundle\Consumer\RedisEntryConsumer
         arguments:
             - "@doctrine.orm.entity_manager"
-            - "@wallabag_user.user_repository"
+            - '@Wallabag\UserBundle\Repository\UserRepository'
             - "@wallabag_import.instapaper.import"
             - "@event_dispatcher"
             - "@logger"
@@ -58,7 +58,7 @@ services:
         class: Wallabag\ImportBundle\Consumer\RedisEntryConsumer
         arguments:
             - "@doctrine.orm.entity_manager"
-            - "@wallabag_user.user_repository"
+            - '@Wallabag\UserBundle\Repository\UserRepository'
             - "@wallabag_import.pinboard.import"
             - "@event_dispatcher"
             - "@logger"
@@ -79,7 +79,7 @@ services:
         class: Wallabag\ImportBundle\Consumer\RedisEntryConsumer
         arguments:
             - "@doctrine.orm.entity_manager"
-            - "@wallabag_user.user_repository"
+            - '@Wallabag\UserBundle\Repository\UserRepository'
             - "@wallabag_import.delicious.import"
             - "@event_dispatcher"
             - "@logger"
@@ -100,7 +100,7 @@ services:
         class: Wallabag\ImportBundle\Consumer\RedisEntryConsumer
         arguments:
             - "@doctrine.orm.entity_manager"
-            - "@wallabag_user.user_repository"
+            - '@Wallabag\UserBundle\Repository\UserRepository'
             - "@wallabag_import.pocket.import"
             - "@event_dispatcher"
             - "@logger"
@@ -121,7 +121,7 @@ services:
         class: Wallabag\ImportBundle\Consumer\RedisEntryConsumer
         arguments:
             - "@doctrine.orm.entity_manager"
-            - "@wallabag_user.user_repository"
+            - '@Wallabag\UserBundle\Repository\UserRepository'
             - "@wallabag_import.wallabag_v1.import"
             - "@event_dispatcher"
             - "@logger"
@@ -142,7 +142,7 @@ services:
         class: Wallabag\ImportBundle\Consumer\RedisEntryConsumer
         arguments:
             - "@doctrine.orm.entity_manager"
-            - "@wallabag_user.user_repository"
+            - '@Wallabag\UserBundle\Repository\UserRepository'
             - "@wallabag_import.wallabag_v2.import"
             - "@event_dispatcher"
             - "@logger"
@@ -163,7 +163,7 @@ services:
         class: Wallabag\ImportBundle\Consumer\RedisEntryConsumer
         arguments:
             - "@doctrine.orm.entity_manager"
-            - "@wallabag_user.user_repository"
+            - '@Wallabag\UserBundle\Repository\UserRepository'
             - "@wallabag_import.elcurator.import"
             - "@event_dispatcher"
             - "@logger"
@@ -184,7 +184,7 @@ services:
         class: Wallabag\ImportBundle\Consumer\RedisEntryConsumer
         arguments:
             - "@doctrine.orm.entity_manager"
-            - "@wallabag_user.user_repository"
+            - '@Wallabag\UserBundle\Repository\UserRepository'
             - "@wallabag_import.firefox.import"
             - "@event_dispatcher"
             - "@logger"
@@ -205,7 +205,7 @@ services:
         class: Wallabag\ImportBundle\Consumer\RedisEntryConsumer
         arguments:
             - "@doctrine.orm.entity_manager"
-            - "@wallabag_user.user_repository"
+            - '@Wallabag\UserBundle\Repository\UserRepository'
             - "@wallabag_import.chrome.import"
             - "@event_dispatcher"
             - "@logger"
