--- a/src/Wallabag/ImportBundle/Resources/config/redis.yml
+++ b/src/Wallabag/ImportBundle/Resources/config/redis.yml
@@ -17,7 +17,7 @@ services:
         arguments:
             - "@doctrine.orm.entity_manager"
             - '@Wallabag\UserBundle\Repository\UserRepository'
-            - "@wallabag_import.readability.import"
+            - '@Wallabag\ImportBundle\Import\ReadabilityImport'
             - "@event_dispatcher"
             - "@logger"
 
@@ -38,7 +38,7 @@ services:
         arguments:
             - "@doctrine.orm.entity_manager"
             - '@Wallabag\UserBundle\Repository\UserRepository'
-            - "@wallabag_import.instapaper.import"
+            - '@Wallabag\ImportBundle\Import\InstapaperImport'
             - "@event_dispatcher"
             - "@logger"
 
@@ -59,7 +59,7 @@ services:
         arguments:
             - "@doctrine.orm.entity_manager"
             - '@Wallabag\UserBundle\Repository\UserRepository'
-            - "@wallabag_import.pinboard.import"
+            - '@Wallabag\ImportBundle\Import\PinboardImport'
             - "@event_dispatcher"
             - "@logger"
 
@@ -80,7 +80,7 @@ services:
         arguments:
             - "@doctrine.orm.entity_manager"
             - '@Wallabag\UserBundle\Repository\UserRepository'
-            - "@wallabag_import.delicious.import"
+            - '@Wallabag\ImportBundle\Import\DeliciousImport'
             - "@event_dispatcher"
             - "@logger"
 
@@ -101,7 +101,7 @@ services:
         arguments:
             - "@doctrine.orm.entity_manager"
             - '@Wallabag\UserBundle\Repository\UserRepository'
-            - "@wallabag_import.pocket.import"
+            - '@Wallabag\ImportBundle\Import\PocketImport'
             - "@event_dispatcher"
             - "@logger"
 
@@ -122,7 +122,7 @@ services:
         arguments:
             - "@doctrine.orm.entity_manager"
             - '@Wallabag\UserBundle\Repository\UserRepository'
-            - "@wallabag_import.wallabag_v1.import"
+            - '@Wallabag\ImportBundle\Import\WallabagV1Import'
             - "@event_dispatcher"
             - "@logger"
 
@@ -143,7 +143,7 @@ services:
         arguments:
             - "@doctrine.orm.entity_manager"
             - '@Wallabag\UserBundle\Repository\UserRepository'
-            - "@wallabag_import.wallabag_v2.import"
+            - '@Wallabag\ImportBundle\Import\WallabagV2Import'
             - "@event_dispatcher"
             - "@logger"
 
@@ -164,7 +164,7 @@ services:
         arguments:
             - "@doctrine.orm.entity_manager"
             - '@Wallabag\UserBundle\Repository\UserRepository'
-            - "@wallabag_import.elcurator.import"
+            - '@Wallabag\ImportBundle\Import\ElcuratorImport'
             - "@event_dispatcher"
             - "@logger"
 
@@ -185,7 +185,7 @@ services:
         arguments:
             - "@doctrine.orm.entity_manager"
             - '@Wallabag\UserBundle\Repository\UserRepository'
-            - "@wallabag_import.firefox.import"
+            - '@Wallabag\ImportBundle\Import\FirefoxImport'
             - "@event_dispatcher"
             - "@logger"
 
@@ -206,6 +206,6 @@ services:
         arguments:
             - "@doctrine.orm.entity_manager"
             - '@Wallabag\UserBundle\Repository\UserRepository'
-            - "@wallabag_import.chrome.import"
+            - '@Wallabag\ImportBundle\Import\ChromeImport'
             - "@event_dispatcher"
             - "@logger"
