--- a/src/Wallabag/CoreBundle/Resources/config/services.yml
+++ b/src/Wallabag/CoreBundle/Resources/config/services.yml
@@ -241,38 +241,6 @@ services:
             - "%wallabag_core.site_credentials.encryption_key_path%"
             - "@logger"
 
-    wallabag_core.command.clean_downloaded_images:
-        class: Wallabag\CoreBundle\Command\CleanDownloadedImagesCommand
-        tags: ['console.command']
-
-    wallabag_core.command.clean_duplicates:
-        class: Wallabag\CoreBundle\Command\CleanDuplicatesCommand
-        tags: ['console.command']
-
-    wallabag_core.command.export:
-        class: Wallabag\CoreBundle\Command\ExportCommand
-        tags: ['console.command']
-
-    wallabag_core.command.generate_url_hashes:
-        class: Wallabag\CoreBundle\Command\GenerateUrlHashesCommand
-        tags: ['console.command']
-
-    wallabag_core.command.install:
-        class: Wallabag\CoreBundle\Command\InstallCommand
-        tags: ['console.command']
-
-    wallabag_core.command.list_user:
-        class: Wallabag\CoreBundle\Command\ListUserCommand
-        tags: ['console.command']
-
-    wallabag_core.command.reload_entry:
-        class: Wallabag\CoreBundle\Command\ReloadEntryCommand
-        tags: ['console.command']
-
-    wallabag_core.command.show_user:
-        class: Wallabag\CoreBundle\Command\ShowUserCommand
-        tags: ['console.command']
-
-    wallabag_core.command.tag_all:
-        class: Wallabag\CoreBundle\Command\TagAllCommand
-        tags: ['console.command']
+    Wallabag\CoreBundle\Command\:
+        resource: ../../Command/*
+        autoconfigure: true
