--- a/src/Wallabag/ImportBundle/Resources/config/services.yml
+++ b/src/Wallabag/ImportBundle/Resources/config/services.yml
@@ -132,10 +132,6 @@ services:
         tags:
             -  { name: wallabag_import.import, alias: chrome }
 
-    wallabag_import.command.import:
-        class: Wallabag\ImportBundle\Command\ImportCommand
-        tags: ['console.command']
-
-    wallabag_import.command.redis_worker:
-        class: Wallabag\ImportBundle\Command\RedisWorkerCommand
-        tags: ['console.command']
+    Wallabag\ImportBundle\Command\:
+        resource: ../../Command/*
+        autoconfigure: true
