--- a/src/Wallabag/CoreBundle/Resources/config/services.yml
+++ b/src/Wallabag/CoreBundle/Resources/config/services.yml
@@ -6,7 +6,7 @@ services:
             - "%wallabag_core.theme%"
 
     # custom form type
-    wallabag_core.form.type.config:
+    Wallabag\CoreBundle\Form\Type\ConfigType:
         class: Wallabag\CoreBundle\Form\Type\ConfigType
         arguments:
             - "%liip_theme.themes%"
@@ -14,7 +14,7 @@ services:
         tags:
             - { name: form.type }
 
-    wallabag_core.filter.type.entry:
+    Wallabag\CoreBundle\Form\Type\EntryFilterType:
         class: Wallabag\CoreBundle\Form\Type\EntryFilterType
         arguments:
             - "@wallabag_core.entry_repository"
