--- a/app/config/services_test.yml
+++ b/app/config/services_test.yml
@@ -9,7 +9,7 @@ services:
         public: true
 
     wallabag_core.entry_repository.test:
-        alias: wallabag_core.entry_repository
+        alias: Wallabag\CoreBundle\Repository\EntryRepository
         public: true
 
     wallabag_user.user_repository.test:
