--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -40,7 +40,7 @@ twig:
     strict_variables: "%kernel.debug%"
     form_themes:
         - "LexikFormFilterBundle:Form:form_div_layout.html.twig"
-    exception_controller: wallabag_core.exception_controller:showAction
+    exception_controller: Wallabag\CoreBundle\Controller\ExceptionController:showAction
     globals:
         registration_enabled: '%fosuser_registration%'
 
@@ -171,7 +171,7 @@ liip_theme:
     themes:
         - baggy
         - material
-    autodetect_theme: wallabag_core.helper.detect_active_theme
+    autodetect_theme: Wallabag\CoreBundle\Helper\DetectActiveTheme
 
     path_patterns:
         bundle_resource:
