--- a/src/Wallabag/CoreBundle/Resources/config/services.yml
+++ b/src/Wallabag/CoreBundle/Resources/config/services.yml
@@ -1,5 +1,5 @@
 services:
-    wallabag_core.helper.detect_active_theme:
+    Wallabag\CoreBundle\Helper\DetectActiveTheme:
         class: Wallabag\CoreBundle\Helper\DetectActiveTheme
         arguments:
             - "@security.token_storage"
@@ -22,14 +22,14 @@ services:
         tags:
             - { name: form.type }
 
-    wallabag_core.param_converter.username_feed_token_converter:
+    Wallabag\CoreBundle\ParamConverter\UsernameFeedTokenConverter:
         class: Wallabag\CoreBundle\ParamConverter\UsernameFeedTokenConverter
         tags:
             - { name: request.param_converter, converter: username_feed_token_converter }
         arguments:
             - "@doctrine"
 
-    wallabag_core.subscriber.table_prefix:
+    Wallabag\CoreBundle\Event\Subscriber\TablePrefixSubscriber:
         class: Wallabag\CoreBundle\Event\Subscriber\TablePrefixSubscriber
         arguments:
             - "%database_table_prefix%"
@@ -58,7 +58,7 @@ services:
     wallabag_core.http_client:
         alias: 'httplug.client.wallabag_core'
 
-    wallabag_core.guzzle_authenticator.config_builder:
+    Wallabag\CoreBundle\GuzzleSiteAuthenticator\GrabySiteConfigBuilder:
         class: Wallabag\CoreBundle\GuzzleSiteAuthenticator\GrabySiteConfigBuilder
         arguments:
             - '@Graby\SiteConfig\ConfigBuilder'
@@ -70,7 +70,7 @@ services:
 
     # service alias override
     bd_guzzle_site_authenticator.site_config_builder:
-        alias: wallabag_core.guzzle_authenticator.config_builder
+        alias: Wallabag\CoreBundle\GuzzleSiteAuthenticator\GrabySiteConfigBuilder
 
     Wallabag\CoreBundle\Helper\HttpClientFactory:
         class: Wallabag\CoreBundle\Helper\HttpClientFactory
@@ -200,21 +200,21 @@ services:
                 path: '%redis_path%'
                 password: '%redis_password%'
 
-    wallabag_core.exception_controller:
+    Wallabag\CoreBundle\Controller\ExceptionController:
         class: Wallabag\CoreBundle\Controller\ExceptionController
         public: true
         arguments:
             - '@twig'
             - '%kernel.debug%'
 
-    wallabag_core.subscriber.sqlite_cascade_delete:
+    Wallabag\CoreBundle\Event\Subscriber\SQLiteCascadeDeleteSubscriber:
         class: Wallabag\CoreBundle\Event\Subscriber\SQLiteCascadeDeleteSubscriber
         arguments:
             - "@doctrine"
         tags:
             - { name: doctrine.event_subscriber }
 
-    wallabag_core.subscriber.download_images:
+    Wallabag\CoreBundle\Event\Subscriber\DownloadImagesSubscriber:
         class: Wallabag\CoreBundle\Event\Subscriber\DownloadImagesSubscriber
         arguments:
             - "@doctrine.orm.default_entity_manager"
