Use FQCN as service name for Predis client

--- a/src/Wallabag/CoreBundle/Resources/config/services.yml
+++ b/src/Wallabag/CoreBundle/Resources/config/services.yml
@@ -190,7 +190,7 @@ services:
             - "@security.token_storage"
             - "@router"
 
-    wallabag_core.redis.client:
+    Predis\Client:
         class: Predis\Client
         arguments:
             -
